# kyocera-drivers

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  description.txt  kyocera-drivers.kdev4  kyocera_drivers.desktop  output.kpsl  readme.md
.kdev4/: kyocera-drivers.kdev4
cmake/: clang_doc-config.cmake  clang_format-config.cmake  clang_tidy-config.cmake  cpplint-config.cmake  get_cpm.cmake  kyocera_ppd-config.cmake  package-config.cmake
cmake/cfg/: clang_format-config.cmake  clang_tidy-config.cmake  cpplint-config.cmake
cmake/code-quality-tools/: clang_tidy-config.cmake  cpplint-config.cmake
ctest/: test_halfton.cxx  test_unicode.cxx
docker/: .dockerignore  Dockerfile
filters/: rastertokpsl_64
original/: CMakeLists.txt
ppd/English/: Kyocera_FS-1025MFPGDI.ppd  Kyocera_FS-1060DNGDI.ppd  Kyocera_FS-1125MFPGDI.ppd
ppd/ru/: Kyocera_FS-1020MFPGDI.ppd
proprietary/: CMakeLists.txt  wrapper.sh
scripts/: CMakeLists.txt  build.sh  choose_lang_by_dir_name.sh  fetch_drivers.sh  generate_and_install.sh  test.sh  wrapper.sh
src/: CMakeLists.txt  halfton.c  halfton.cxx  halfton.h  halfton.hxx  main.c  main.cxx  rastertokpsl.c  rastertokpsl.cxx  rastertokpsl.h  rastertokpsl.hxx
src/libjbig/: CMakeLists.txt
src/unicode/: CMakeLists.txt
test/: CMakeLists.txt  example.c  example.h  main.c  main.cxx  minunit.h  test_halfton.c  test_halfton.cxx  test_halfton.h  test_halfton.hxx  test_unicode.c  test_unicode.cxx  test_unicode.h  test_unicode.hxx
tests/: CMakeLists.txt  original.kpsl  test.sh  test_filter.cxx  test_raster.cxx
